[package]
name = "k32l3a60-cm4"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@tsoutsman.com>"]
edition = "2021"
description = "Peripheral access API for the Cortex M4 core on the K32L3A60 microcontroller"
repository = "https://github.com/tsoutsman/k32l3a60-cm4"
license = "MIT OR Apache-2.0"
keywords = ["k32", "nxp", "mcux"]
categories = ["hardware-support", "no-std", "no-std::no-alloc"]

[dependencies]
cortex-m = "0.7.7"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
version = "0.7.3"
optional = true
features = ["device"]

[features]
rt = ["dep:cortex-m-rt"]
